--- a/src/components/webCorporativa/navbar/styles.css
+++ b/src/components/webCorporativa/navbar/styles.css
@@ -1,9 +1,11 @@
 .nav {
   background: rgb(252, 213, 162);
-  background: linear-gradient(90deg, rgba(252, 213, 162, 1) 0%, rgba(255, 211, 208, 1) 100%);
+  background: linear-gradient(90deg, rgba(252, 213, 162, 1) 0%, rgba(243, 113, 208, 1) 100%);
   width: 100%;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
+
   position: sticky;
+  z-index: 1;
   top: 0;
   background: rgb(252, 213, 162);
   background: linear-gradient(90deg, rgba(252, 213, 162, 1) 0%, rgba(255, 211, 208, 1) 100%);
